fix(welcome-page): change font family and spacing

--- a/css/_welcome_page.scss
+++ b/css/_welcome_page.scss
@@ -1,5 +1,5 @@
 .welcome {
-    font-family: Helvetica;
+    font-family: $welcomePageFontFamily;
     height: 100%;
     overflow: auto;
     position: relative;
@@ -16,9 +16,10 @@
         .header-text {
             display: flex;
             flex-direction: column;
-            height: 286px;
             justify-content: space-around;
             margin-top: 120px;
+            margin-bottom: 20px;
+            min-height: 286px;
             width: 645px;
         }
 
@@ -27,6 +28,7 @@
             font-size: 48px;
             letter-spacing: -1px;
             line-height: 58px;
+            margin-bottom: 20px;
         }
 
         .header-text-description {
@@ -47,7 +49,7 @@
         #new_enter_room {
             align-items: center;
             display: flex;
-            margin-top: 25px;
+            margin-bottom: 20px;
             position: relative;
             z-index: 2;
 
@@ -66,7 +68,7 @@
 
 .welcome.with-content {
     .header {
-        height: 552px;
+        min-height: 552px;
     }
     .header-image {
         left: -61px;
